--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,7 @@
       rel="stylesheet"
     />
     <title>NCBT</title>
+    <!-- <script src="https://js.tosspayments.com/v2/standard"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
